Running implementation of "PIA Analyis" node
this node can be used for almost all PIA analyses and exports to the
PSM, peptide and protein layer as native KNIME table

--- a/de.mpc.pia.knime.nodes/src/de/mpc/pia/knime/nodes/analysis/package.html
+++ b/de.mpc.pia.knime.nodes/src/de/mpc/pia/knime/nodes/analysis/package.html
@@ -15,9 +15,9 @@ otherwise expressly permitted in writing by the copyright owner.
 <body>
 This package implements ... (insert package description here)
 <p>
-The <code>PIADefaultModel</code> ... (short comments on the classes)
+The <code>PIAAnalysisModel</code> ... (short comments on the classes)
 <p>
-The <code>PIADefaultDialog</code> ... (short comments on the classes)
+The <code>PIAAnalysisDialog</code> ... (short comments on the classes)
 <p>
 More comments ...
 <br>
